# Enigma

./: .gitignore  Pipfile  README.md  ROADMAP.md  pyproject.toml
enigma/: __init__.py  bandit.py  cascade.py  cli.py  config.py  daemon.py  engine.py  evaluators.py  llm.py  memory.py  task.py  web.py
sidecar/: prm_server.py  requirements.txt  run.sh  setup.sh
