[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-engine"
version = "0.1.0"
description = "Background self-learning task engine: local Ollama models with cloud frontier cohesion"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27"]

[project.scripts]
enigma = "enigma.cli:main"

[tool.setuptools.packages.find]
include = ["enigma*"]
